# kde-icon-helper

./: .gitignore  README.md  RELEASE_NOTES_1.0.6.md  go  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: tauri-x11-filter.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backups.rs  checker.rs  desktop.rs  diagnostics.rs  fixer.rs  main.rs  maintenance.rs  models.rs  paths.rs  scanner.rs  tools.rs
src/lib/: inspector-insights.ts  launcher-controller.ts  launcher-ui.ts  types.ts
src/lib/components/: BackupPanel.svelte  ContextMenu.svelte  DiagnosticsPanel.svelte  InspectorPanel.svelte  LauncherList.svelte  MaintenancePanel.svelte  UtilityDrawer.svelte
src/routes/: +layout.svelte  +page.svelte
