[package]
name = "kde-icon-helper"
version = "1.0.6"
description = "KDE Icon Helper"
edition = "2021"

[lib]
name = "kde_icon_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
walkdir = "2"
regex = "1"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
